frontend z-index fixes

--- a/gigFinder_Front/src/index.css
+++ b/gigFinder_Front/src/index.css
@@ -27,10 +27,6 @@ body {
   font-size: 24pt;
 }
 
-.break {
-  flex-basis: 100%;
-  height: 0;
-}
 .centered {
   margin: 3rem auto;
   text-align: center;
@@ -42,14 +38,15 @@ body {
 .eventlist {
   background-color: rgb(206, 208, 236);
   height: 90vh;
-  z-index: -1;
+  z-index: 20;
+
   overflow-y: scroll;
   scrollbar-width: thin;
 }
 .eventdisplay {
   background-color: rgb(178, 193, 136);
   height: 90vh;
-  z-index: -1;
+  z-index: 20;
 }
 .entry {
   background-color: rgb(255, 255, 255);
@@ -59,6 +56,7 @@ body {
   max-height: 138px;
   overflow: hidden;
   box-shadow: 2px 2px 5px #4733474f;
+  cursor: pointer;
 }
 .entry img {
   height: 120px;
